fix table overflow

--- a/src/components/client/Markdown/style/rehype-code-title.scss
+++ b/src/components/client/Markdown/style/rehype-code-title.scss
@@ -8,17 +8,4 @@
     border-radius: 0.3em 0.3em 0 0;
     overflow: hidden;
   }
-
-  /* table */
-  table {
-    margin: 12px 0;
-    border-collapse: collapse;
-  }
-
-  table td,
-  table th {
-    border: 1px solid #ddd;
-    padding: 0.5em 1em;
-    color: #494949;
-  }
 }
